@startuml

hide fields
hide SoloHarmonizer methods
hide SoloHarmonizerEditor methods
hide juce_AudioPlayhead methods
hide Playhead methods
hide SoloHarmonizerVst methods
hide ProcessCallbackDrivenPlayhead methods
hide HostDrivenPlayhead methods
hide IntervalGetter methods
hide PositionGetter methods
hide MidiFileOwner methods

abstract class Playhead
class SoloHarmonizer
class SoloHarmonizerEditor
class SoloHarmonizerVst
class ProcessCallbackDrivenPlayhead
class HostDrivenPlayhead
class PositionGetter

abstract class MidiFileOwner

class IntervalGetter
class PositionGetter

SoloHarmonizerVst *- MidiFileOwner
SoloHarmonizerVst *-- SoloHarmonizer
ProcessCallbackDrivenPlayhead .* SoloHarmonizerVst
SoloHarmonizerVst *. HostDrivenPlayhead
SoloHarmonizerEditor -o SoloHarmonizer
SoloHarmonizer o-- MidiFileOwner
SoloHarmonizerEditor o-- MidiFileOwner

SoloHarmonizer o. IntervalGetter
MidiFileOwner *- IntervalGetter
SoloHarmonizerEditor o. PositionGetter
PositionGetter -* MidiFileOwner

SoloHarmonizerVst o-- juce_AudioPlayhead
SoloHarmonizerVst o.. SoloHarmonizerEditor
Playhead <|-- SoloHarmonizerVst
Playhead <|-- ProcessCallbackDrivenPlayhead
Playhead <|-- HostDrivenPlayhead
Playhead --o SoloHarmonizer

@enduml
